# thaw-slump-segmentation

./: .gitignore  .gitmodules  404.html  CHANGELOG.md  CITATION.cff  LICENSE  README.md  S2 Data Check.ipynb  S2 Data Experiments.ipynb  S2 Data Tiling.ipynb  build_datacubes.py  compare_model_outputs-add20.ipynb  compare_model_outputs-analysis.ipynb  compare_model_outputs.ipynb  config.yml  config_example.yml  data_loading.py  debug_performance.py  df_train_filtered.pkl  df_train_filtered_add20.pkl  df_val_filtered.pkl  df_val_filtered_add20.pkl  download_s2_4band_planet_format.py  environment.yml  example_config.yml  gen_doc_stubs.py  index.html  inference.py  mkdocs.yml  objects.inv  prepare_data.py  prepare_s2_4band_planet_format.py  process_02_inference.py  process_03_ensemble.py  pyproject.toml  setup_raw_data.py  system.yml.sample  train.py  train_classifier.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_docs.yml
deep_learning/: __init__.py  loss_functions.py  metrics.py  state.py  trainer.py
deep_learning/data_pre_processing/: __init__.py  earthengine.py  utils.py
deep_learning/marching_snake/: Snake.ipynb  snakenet.py  toy_test.py
deep_learning/models/: __init__.py  attention_clustering.py  boring_backbone.py  enet.py  layers.py  logistic_regression.py  merger.py  ocr.py  resnet.py  unet.py
deep_learning/models/marching_snake/: marching_squares.py  snake.py
deep_learning/models/utils/: train.py
deep_learning/utils/: __init__.py  data.py  geometry.py  images.py  io.py  logging.py  lovasz.py  plot_info.py  plot_statistics.py  stats.py
docs/: gen_doc_stubs.py  index.md  scripts.md
lib/: __init__.py  loss_functions.py  metrics.py  postprocessing.py
lib/data/: __init__.py  absolute_elevation.py  base.py  hillshade.py  loading.py  mask.py  planet.py  relative_elevation.py  sentinel1.py  sentinel2.py  slope.py  tcvis.py
lib/data_pre_processing/: __init__.py  earthengine.py  gdal.py  sentinel.py  udm.py  utils.py
lib/models/: __init__.py  plain_unet.py
lib/models/losses/: soft_bce.py
lib/models/unet3p/: layers.py  unet3p.py
lib/utils/: __init__.py  data.py  geometry.py  images.py  io.py  logging.py  plot_info.py  plot_statistics.py  stats.py  yaml_custom.py
notebooks/: lewkowicz-metrics-analysis.ipynb
reference/src/thaw_slump_segmentation/__main__/: index.html
reference/src/thaw_slump_segmentation/data_loading/: index.html
reference/src/thaw_slump_segmentation/data_pre_processing/dem/: index.html
reference/src/thaw_slump_segmentation/data_pre_processing/earthengine/: index.html
reference/src/thaw_slump_segmentation/data_pre_processing/gdal/: index.html
reference/src/thaw_slump_segmentation/data_pre_processing/udm/: index.html
reference/src/thaw_slump_segmentation/data_pre_processing/utils/: index.html
reference/src/thaw_slump_segmentation/loss_functions/: index.html
reference/src/thaw_slump_segmentation/main/: index.html
reference/src/thaw_slump_segmentation/metrics/: index.html
reference/src/thaw_slump_segmentation/metrics/binary_instance_prc/: index.html
reference/src/thaw_slump_segmentation/metrics/binary_instance_stat_scores/: index.html
reference/src/thaw_slump_segmentation/metrics/boundary_helpers/: index.html
reference/src/thaw_slump_segmentation/metrics/boundary_iou/: index.html
reference/src/thaw_slump_segmentation/metrics/instance_helpers/: index.html
reference/src/thaw_slump_segmentation/models/__version__/: index.html
reference/src/thaw_slump_segmentation/postprocessing/: index.html
reference/src/thaw_slump_segmentation/scripts/download_s2_4band_planet_format/: index.html
reference/src/thaw_slump_segmentation/scripts/inference/: index.html
reference/src/thaw_slump_segmentation/scripts/prepare_data/: index.html
scripts/: index.html
search/: search_index.json
singularity/: singularity.def
src/thaw_slump_segmentation/: __init__.py  __main__.py  data_loading.py  main.py  metrics.py  postprocessing.py
src/thaw_slump_segmentation/data_pre_processing/: __init__.py  dem.py  gdal.py  udm.py  utils.py
src/thaw_slump_segmentation/metrics/: __init__.py  binary_instance_prc.py  binary_instance_stat_scores.py  boundary_helpers.py  boundary_iou.py  instance_helpers.py
src/thaw_slump_segmentation/models/: __init__.py
src/thaw_slump_segmentation/models/losses/: __init__.py  focal.py  lovasz.py  soft_bce.py
src/thaw_slump_segmentation/models/unet3p/: init_weights.py
src/thaw_slump_segmentation/models/utils/: losses.py
src/thaw_slump_segmentation/scripts/: __init__.py  download_s2_4band_planet_format.py  inference.py  lewkowicz_metrics.py  prepare_data.py  prepare_s2_4band_planet_format.py  process_02_inference.py  process_03_ensemble.py  setup_raw_data.py  train.py
src/thaw_slump_segmentation/utils/: data.py  io.py  logging.py  plot_info.py
tests/: conftest.py  test_DEM.py  test_boundary_iou.py  test_hello.py  test_instance_metrics.py  test_lewkowicz_metrics.ipynb  test_preprocessDirectory.py
(+66 files in other folders)
