[project]
name = "thaw-slump-segmentation"
version = "0.8.2"
description = "Add your description here"
authors = [
    { name = "Ingmar Nitze", email = "ingmar.nitze@awi.de" },
    { name = "Konrad Heidler", email = "k.heidler@tum.de" }
]
dependencies = [
    "torch==2.2.0",
    "torchvision",
    "numpy>=1.26.3",
    "efficientnet-pytorch==0.7.1",
    "wandb>=0.16.6",
    "pretrainedmodels>=0.7.4",
    "albumentations>=1.4.4",
    "timm==0.6.13",
    "matplotlib>=3.8.4",
    "xarray>=2024.3.0",
    "einops>=0.7.0",
    "geopandas>=0.14.3",
    "rasterio>=1.3.10",
    "rioxarray>=0.15.5",
    "pyproj>=3.6.1",
    "earthengine-api>=0.1.399",
    "geedim>=1.7.2",
    "geemap>=0.32.0",
    "eemont>=0.3.6",
    "joblib==1.3",
    "scikit-image>=0.23.2",
    "h5py>=3.11.0",
    "ipython>=8.23.0",
    "cython>=3.0.10",
    "tqdm>=4.64.1",
    "pyyaml>=6.0.1",
    "pathlib>=1.0.1",
    "docopt>=0.6.2",
    "pandas>=2.2.2",
    "rtree>=1.2.0",
    "yacs>=0.1.8",
    "requests>=2.28.1",
    "opencv-python>=4.9.0.80",
    "swifter>=1.4.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
download_s2_4band_planet_format = "thaw_slump_segmentation.scripts.download_s2_4band_planet_format:main"
inference = "thaw_slump_segmentation.scripts.inference:main"
prepare_data = "thaw_slump_segmentation.scripts.prepare_data:main"
prepare_s2_4band_planet_format = "thaw_slump_segmentation.scripts.prepare_s2_4band_planet_format:main"
process_02_inference = "thaw_slump_segmentation.scripts.process_02_inference:main"
process_03_ensemble = "thaw_slump_segmentation.scripts.process_03_ensemble:main"
setup_raw_data = "thaw_slump_segmentation.scripts.setup_raw_data:main"
train = "thaw_slump_segmentation.scripts.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.23.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/thaw_slump_segmentation"]

# [[tool.rye.sources]]
# name = "pytorch"
# url = "https://download.pytorch.org/whl/cu118"
