[project]
name = "thaw-slump-segmentation"
version = "0.11.0a"
description = "Thaw slump segmentation workflow using PlanetScope data and pytorch"
authors = [
    { name = "Ingmar Nitze", email = "ingmar.nitze@awi.de" },
    { name = "Konrad Heidler", email = "k.heidler@tum.de" },
    { name = "Jonas Küpper", email = "jonas.kuepper@awi.de" },
    { name = "Tobias Hölzer", email = "tobias.hoelzer@awi.de" },
]
dependencies = [
    "torch==2.2.0",
    "torchvision",
    "numpy>=1.26.3, <2",
    "efficientnet-pytorch==0.7.1",
    "wandb>=0.16.6",
    "pretrainedmodels>=0.7.4",
    "albumentations>=1.4.4",
    "timm==0.6.13",
    "matplotlib>=3.8.4",
    "xarray>=2024.3.0",
    "einops>=0.7.0",
    "geopandas>=0.14.3",
    "rasterio>=1.3.10",
    "rioxarray>=0.15.5",
    "pyproj>=3.6.1",
    "earthengine-api==0.1.381",
    "geedim>=1.7.2",
    "geemap==0.29.6",
    "eemont==0.3.6",
    "joblib==1.3",
    "scikit-image>=0.22.0",
    "h5py>=3.11.0",
    "ipython>=8.23.0",
    "cython>=3.0.10",
    "tqdm>=4.64.1",
    "pyyaml>=6.0.1",
    "pathlib>=1.0.1",
    "docopt>=0.6.2",
    "pandas>=2.2.2",
    "rtree>=1.2.0",
    "yacs>=0.1.8",
    "requests>=2.28.1",
    "opencv-python>=4.9.0.80",
    "swifter>=1.4.0",
    "mkdocs-awesome-pages-plugin>=2.9.2",
    "rich>=13.7.1",
    "torchsummary>=1.5.1",
    "typer>=0.12.3",
    "torchmetrics @ git+https://github.com/Lightning-AI/torchmetrics",
]
readme = "README.md"
requires-python = "== 3.11.*"

[project.scripts]
inference = "thaw_slump_segmentation.scripts.inference:main"
prepare_data = "thaw_slump_segmentation.scripts.prepare_data:main"
# process_02_inference = "thaw_slump_segmentation.scripts.process_02_inference:main"
# process_03_ensemble = "thaw_slump_segmentation.scripts.process_03_ensemble:main"
setup_raw_data = "thaw_slump_segmentation.scripts.setup_raw_data:setup_raw_data"
train = "thaw_slump_segmentation.scripts.train:main"
thaw-slump-segmentation = "thaw_slump_segmentation.main:cli"
build_dem_vrt = "thaw_slump_segmentation.data_pre_processing.dem:buildDemVrtMain"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.2",
    "ipykernel>=6.29.4",
    "ipython>=8.23.0",
    "mkdocs-material>=9.5.19",
    "mkdocstrings[python]>=0.24.3",
    "mkdocs-gen-files>=0.5.0",
    "pytest>=8.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/thaw_slump_segmentation"]

# [[tool.rye.sources]]
# name = "pytorch"
# url = "https://download.pytorch.org/whl/cu118"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
